--- a/library.properties
+++ b/library.properties
@@ -3,6 +3,7 @@ version=1.0.0
 author=Alexandre Berthelot
 maintainer=Alexandre Berthelot <alexandreberthelot9108@gmail.com>
 sentence=Arduino Telegram Bot library.
+paragraph=Arduino Telegram Bot library.
 category=Communication
 url=https://github.com/ender9108/TelegramBot
 architectures=*
